<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:fillViewport="false"
    android:orientation="vertical"
    tools:context=".UI.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/registration_form"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/firstname_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimary" />


        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/lastname_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"

            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"

            />

        <EditText
            android:id="@+id/et_r_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Username_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"

            />

        <EditText
            android:id="@+id/et_r_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"


            />

        <CheckBox
            android:id="@+id/cb_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/terms_of_service"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_submit_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/yellow_gradient_xml"
            android:padding="8dp"
            android:text="@string/sub_reg"
            android:textAlignment="center"
            android:textColor="@color/whiteish"
            android:textSize="15sp" />


    </LinearLayout>


</ScrollView>