<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:background="@drawable/background"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context=".UI.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/moviebox" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_in_moviebox"
            android:textAlignment="center"
            android:textColor="@color/whiteish"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/whiteish"
            android:textColorHint="@color/whiteish"


            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/whiteish"
            android:textColorHint="@color/whiteish"

            />

        <Button
            android:id="@+id/btn_sign_in_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/yellow_gradient_xml"
            android:padding="8dp"
            android:text="@string/sign_in_btn"
            android:textAlignment="center"
            android:textColor="@color/whiteish"
            android:textSize="15sp" />


    </LinearLayout>


</ScrollView>